--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typechain": "typechain --target web3-v1 --out-dir types/abi './build/contracts/**/*.json'"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^2.5.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,6 +22,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "web3": "^1.10.2",
+    "web3-utils": "^4.0.5"
+  },
+  "devDependencies": {
+    "@typechain/web3-v1": "^6.0.6",
+    "typechain": "^8.3.1"
   }
 }
